--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/raleway": "^4.5.10",
     "framer-motion": "^6.5.1",
+    "google-map-react": "^2.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "18.7.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
